--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.0.2",
+    "@angular/animations": "^12.0.5",
+    "@angular/cdk": "^12.0.5",
     "@angular/common": "~12.0.2",
     "@angular/compiler": "~12.0.2",
     "@angular/core": "~12.0.2",
     "@angular/forms": "~12.0.2",
+    "@angular/localize": "^12.0.5",
     "@angular/platform-browser": "~12.0.2",
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
@@ -22,6 +24,8 @@
     "alertifyjs": "^1.13.1",
     "apexcharts": "^3.22.2",
     "ng-apexcharts": "^1.5.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
