--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-apexcharts": "^1.5.1",
     "primeicons": "^4.1.0",
     "primeng": "^12.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
